tests/lean/silent_failure.lean.expected.out
silent_failure.lean:5:12-5:13: error: invalid use of 'partial', 'g' is not a function
  let_fun this := ⋯;
  False
